--- a/website/portfolio/CSS/home_skeleton.css
+++ b/website/portfolio/CSS/home_skeleton.css
@@ -87,43 +87,10 @@
     .picture {
         height: 25vw;
     }
-    #connect1 {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con1.svg') no-repeat 0 0;
-        background-size: 124px 30px;
-        transition: all .2s;
-    }
-    #connect1:hover {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con2.svg') no-repeat 0 0;
-        background-size: 124px 30px;
-    }
-    #connect2 {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con1.svg') no-repeat 50% 0;
-        background-size: 124px 30px;
-        transition: all .2s;
-    }
-    #connect2:hover {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con2.svg') no-repeat 50% 0;
-        background-size: 124px 30px;
-    }
-    #connect3 {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con1.svg') no-repeat 100% 0;
-        background-size: 124px 30px;
-        transition: all .2s;
-    }
-    #connect3:hover {
-        width: 30px;
-        height: 30px;
-        background: url('../images/icon/con2.svg') no-repeat 100% 0;
-        background-size: 124px 30px;
+}
+
+@media (max-device-width: 1025px) {
+    #banner {
+        background-attachment: scroll;
     }
 }
